RESOLVED FIXED301641
REGRESSION(302102@main): daringfireball.net layout is broken at wider window widths when zooming
https://bugs.webkit.org/show_bug.cgi?id=301641
Summary REGRESSION(302102@main): daringfireball.net layout is broken at wider window ...
Sammy Gill
Reported 2025-10-29 11:18:44 PDT
Loading up daringfireball.net and zooming results in bad layout. The sidebar ends up getting mixed in with the main content
Attachments
Sammy Gill
Comment 1 2025-10-29 11:19:19 PDT
Sammy Gill
Comment 2 2025-10-29 11:29:12 PDT
EWS
Comment 3 2025-10-29 21:28:52 PDT
Committed 302331@main (5d5ab2203d17): <https://commits.webkit.org/302331@main> Reviewed commits have been landed. Closing PR #53153 and removing active labels.
Tim Nguyen (:ntim)
Comment 4 2025-10-31 15:11:55 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/55805
Note You need to log in before you can comment on or make changes to this bug.